Bug 1008244 Don't consume Enter key at keypress event when <select size=1> has focus but its dropdown list is closed r=smaug